optimize brief description.

--- a/vim_lecture.html
+++ b/vim_lecture.html
@@ -85,9 +85,9 @@
 						简介
 					</h2>
 					<ul>
-						<li class="fragment"> 80年代末，由 Bram 开发，Vi IMitation（模拟） </li>
-						<li class="fragment"> Vim 被称为 “编辑器之神”，EMACS 是“神之编辑器” </li>
-						<li class="fragment"> 2014 年发起 Neovim，2015 年发布 0.1 版本，发展迅速，也反过来推动了 Vim 社区的发展 </li>
+						<li class="fragment"> 80年代末，由 Bram 为他的 Amiga 电脑开发，<b>V</b>i <b>IM</b>itation<span class="fragment">，后来被称为 <b>V</b>i <b>IM</b>proved</span></li>
+						<li class="fragment"> Vim 被称为 “编辑器之神”，EMACS “神之编辑器” </li>
+						<li class="fragment"> 值得一提的是，2014 年 NeoVim 诞生，发展迅速，也反过来推动了 Vim 社区的发展 </li>
 					</ul>
 				</section>
 
