update amd3a description

--- a/vim_lecture.html
+++ b/vim_lecture.html
@@ -167,16 +167,19 @@
 					</section>
 
 					<section data-background-image="img/lsi-adm3a-full-keyboard.jpg" data-background-size="contain"> 
-						<h3 class="fragment">AMD-3A 键盘</h3>
-						<!-- <small>
-							图片来源 http://www.catonmat.net/blog/why-vim-uses-hjkl-as-arrow-keys/
-						</small> -->
+						<h3 class="fragment"><span class="background_description">AMD-3A 键盘</span></h3>
+						<p class="fragment">
+							<small class="background_description">图片来源 http://www.catonmat.net/blog/why-vim-uses-hjkl-as-arrow-keys/</small>
+						</p>
 					</section>
 					<section data-background-image="img/lsi-adm-3a.jpg" data-background-size="contain"> 
-						<h3>AMD-3A 真身</h3>
-						<!-- <small>
-							图片来源 http://www.catonmat.net/blog/why-vim-uses-hjkl-as-arrow-keys/
-						</small> -->
+						<h3 class="fragment"><span class="background_description">AMD-3A terminal 真身</span></h3>
+						<p class="fragment">
+							<span class="background_description">vi 编辑器在这里诞生</span>
+						</p>
+						<p class="fragment">
+							<small class="background_description">图片来源 http://www.catonmat.net/blog/why-vim-uses-hjkl-as-arrow-keys/</small>
+						</p>
 					</section>
 
 					<section>
