update outline and title

--- a/vim_lecture.html
+++ b/vim_lecture.html
@@ -72,8 +72,8 @@
 					<ol>
 						<li> 简介 </li>
 						<li> 环境搭建 </li>
-						<li> 移动 </li>
-						<li> 编辑 </li>
+						<li> 移动光标 </li>
+						<li> 编辑命令 </li>
 						<li> 查找 </li>
 						<li> 多窗口管理 </li>
 						<li> 其他插件 &amp; 技巧 </li>
@@ -152,7 +152,7 @@
 				<section>
 
 					<section>
-						<h2>移动</h2>
+						<h2>移动光标</h2>
 					</section>
 
 					<section>
